--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,8 @@
   }]
 }.
 
-{erl_opts, [debug_info, warn_export_vars]}.
+{erl_opts, [debug_info, warn_export_vars,
+            {platform_define, "linux", 'HAVE_SYNC_DIR'}]}.
 {dialyzer, [{warnings,
              [error_handling,
               race_conditions,
@@ -20,3 +21,9 @@
               locals_not_used,
               deprecated_function_calls,
               deprecated_functions]}.
+{plugins, [pc]}.
+{provider_hooks,
+ [{pre, [{compile, {pc, compile}},
+         {clean, {pc, clean}}]}]}.
+{port_specs, [{"linux", "priv/sync_nif.so", ["c_src/sync_nif.c"]}]}.
+{port_env, [{"CFLAGS", "$CFLAGS -Wall -Werror -std=gnu99"}]}.
