--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,18 @@
              {git, "https://github.com/klarna/vnet.git",
               {branch, "master"}}}]
           }]
+  },
+  {example, [{deps,
+             [{cowlib, ".*",{git,"https://github.com/ninenines/cowlib",
+                             {tag, "2.9.1"}}},
+              {ranch, ".*",{git,"https://github.com/ninenines/ranch",
+                            {tag, "1.7.1"}}},
+              {cowboy, {git, "https://github.com/ninenines/cowboy",
+                        {tag, "2.8.0"}}},
+              {jiffy, {git, "git@github.com:davisp/jiffy.git",
+                       {tag, "1.0.5"}}}]
+  },
+             {erl_opts, [{src_dirs, ["src", "example"]}]}]
   }]
 }.
 
