Remove explicit dependencies on cowlib and ranch
Change-Id: I2546c63aeb05d45e6aa2cdb28102d853db5e6c5e

--- a/rebar.config
+++ b/rebar.config
@@ -6,11 +6,7 @@
           }]
   },
   {example, [{deps,
-             [{cowlib, ".*",{git,"https://github.com/ninenines/cowlib",
-                             {tag, "2.9.1"}}},
-              {ranch, ".*",{git,"https://github.com/ninenines/ranch",
-                            {tag, "1.7.1"}}},
-              {cowboy, {git, "https://github.com/ninenines/cowboy",
+             [{cowboy, {git, "https://github.com/ninenines/cowboy",
                         {tag, "2.8.0"}}},
               {jiffy, {git, "git@github.com:davisp/jiffy.git",
                        {tag, "1.0.5"}}}]
