Turn the example into an independent application.
That now lives in /examples/chronicled and can be played with by using
`start_cluster' with `--app chronicled' passed to it.

--- a/rebar.config
+++ b/rebar.config
@@ -5,14 +5,7 @@
               {branch, "master"}}}]
           }]
   },
-  {example, [{deps,
-             [{cowboy, {git, "https://github.com/ninenines/cowboy",
-                        {tag, "2.8.0"}}},
-              {jiffy, {git, "git@github.com:davisp/jiffy.git",
-                       {tag, "1.0.5"}}}]
-  },
-             {erl_opts, [{src_dirs, ["src", "example"]}]}]
-  }]
+  {examples, [{project_app_dirs, ["examples/*", "."]}]}]
 }.
 
 {erl_opts, [debug_info, warn_export_vars,
