--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,7 @@
 
 {erl_opts, [debug_info, warn_export_vars,
             {platform_define, "linux", 'HAVE_SYNC_DIR'}]}.
+{minimum_otp_vsn, "22"}.
 {dialyzer, [{warnings,
              [error_handling,
               race_conditions,
