Add a stub for a script to dump logs/snapshots.

--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,13 @@
   {examples, [{project_app_dirs, ["examples/*", "."]}]}]
 }.
 
+{escript_main_app, chronicle}.
+{escript_name, chronicle_dump}.
+{escript_emu_args, "%%! -escript main chronicle_dump\n"}.
+
 {erl_opts, [debug_info, warn_export_vars,
+            {i, ["src"]},
+            {src_dirs, ["src", "scripts/chronicle_dump"]},
             {platform_define, "linux", 'HAVE_SYNC_DIR'}]}.
 {erl_first_files, ["src/dynamic_supervisor.erl"]}.
 {minimum_otp_vsn, "22"}.
