Give rebar2 its own config file.

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,6 @@
+%% If you make changes to this file, make sure to make corresponding changes
+%% to rebar2.config as well (if applicable).
+
 {profiles,
  [{test, [{deps,
            [{vnet,
@@ -12,9 +15,8 @@
 {escript_name, chronicle_dump}.
 {escript_emu_args, "%%! -escript main chronicle_dump\n"}.
 
+{src_dirs, ["src", "scripts/chronicle_dump"]}.
 {erl_opts, [debug_info, warn_export_vars,
-            {i, ["src"]},
-            {src_dirs, ["src", "scripts/chronicle_dump"]},
             {platform_define, "linux", 'HAVE_SYNC_DIR'}]}.
 {erl_first_files, ["src/dynamic_supervisor.erl"]}.
 {minimum_otp_vsn, "22"}.
