Build chronicle_dump automatically.

--- a/rebar.config
+++ b/rebar.config
@@ -34,6 +34,7 @@
 {plugins, [pc]}.
 {provider_hooks,
  [{pre, [{compile, {pc, compile}},
-         {clean, {pc, clean}}]}]}.
+         {clean, {pc, clean}}]},
+  {post, [{compile, escriptize}]}]}.
 {port_specs, [{"linux", "priv/sync_nif.so", ["c_src/sync_nif.c"]}]}.
 {port_env, [{"CFLAGS", "$CFLAGS -Wall -Werror -std=gnu99"}]}.
