--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {profiles,
  [{test, [{deps,
            [{vnet,
-             {git, "https://github.com/klarna/vnet.git",
+             {git, "https://github.com/couchbasedeps/vnet.git",
               {branch, "master"}}}]
           }]
   },
