Treat unknown types and functions as errors.

--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,8 @@
 {dialyzer, [{warnings,
              [error_handling,
               race_conditions,
-              unmatched_returns]}]}.
+              unmatched_returns,
+              unknown]}]}.
 
 {xref_extra_paths, ["test"]}.
 {xref_checks,[undefined_function_calls,
