Specify plt_extra_apps for non-default profiles.
For whatever reason, rebar3 does not pick those up on its own.

--- a/rebar.config
+++ b/rebar.config
@@ -6,9 +6,11 @@
            [{vnet,
              {git, "https://github.com/couchbasedeps/vnet.git",
               {branch, "master"}}}]
-          }]
+          },
+          {dialyzer, [{plt_extra_apps, [eunit, vnet]}]}]
   },
-  {examples, [{project_app_dirs, ["examples/*", "."]}]}]
+  {examples, [{project_app_dirs, ["examples/*", "."]},
+              {dialyzer, [{plt_extra_apps, [cowboy, jiffy]}]}]}]
 }.
 
 {escript_main_app, chronicle}.
