--- a/rebar.config
+++ b/rebar.config
@@ -40,4 +40,4 @@
          {clean, {pc, clean}}]},
   {post, [{compile, escriptize}]}]}.
 {port_specs, [{"linux", "priv/sync_nif.so", ["c_src/sync_nif.c"]}]}.
-{port_env, [{"CFLAGS", "$CFLAGS -Wall -Werror -std=gnu99"}]}.
+{port_env, [{"CFLAGS", "$CFLAGS -Wall -Wno-unused-command-line-argument -Werror -std=gnu99"}]}.
