Specify pc version in rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -34,7 +34,7 @@
               locals_not_used,
               deprecated_function_calls,
               deprecated_functions]}.
-{plugins, [pc]}.
+{plugins, [{pc, "~> 1.15"}]}.
 {provider_hooks,
  [{pre, [{compile, {pc, compile}},
          {clean, {pc, clean}}]},
